[gd_scene load_steps=3 format=3 uid="uid://rnu3y7ns3bhj"]

[ext_resource type="Script" path="res://scripts/weapon/base_weapon.gd" id="1_6d4p3"]
[ext_resource type="Script" path="res://scripts/weapon/clip_component.gd" id="2_rd0k7"]

[node name="Weapon" type="Node3D" node_paths=PackedStringArray("climp_component")]
script = ExtResource("1_6d4p3")
climp_component = NodePath("ClimpComponent")

[node name="Model" type="Node3D" parent="."]

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="Model"]

[node name="CSGBox3D" type="CSGBox3D" parent="Model/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0591797, 0, 0)
size = Vector3(1.7, 0.445557, 0.281494)

[node name="CSGBox3D5" type="CSGBox3D" parent="Model/CSGCombiner3D"]
transform = Transform3D(0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 0.705521, -0.00321625, 0)
size = Vector3(0.348828, 0.252747, 0.281494)

[node name="CSGBox3D2" type="CSGBox3D" parent="Model/CSGCombiner3D"]
transform = Transform3D(0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 0, 1, 0.555647, -0.470187, 0)
size = Vector3(0.328613, 1.01331, 0.243164)

[node name="CSGBox3D4" type="CSGBox3D" parent="Model/CSGCombiner3D"]
transform = Transform3D(0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 0, 1, 0.634565, -0.764713, 0)
size = Vector3(0.226563, 0.698761, 0.128906)

[node name="CSGBox3D3" type="CSGBox3D" parent="Model/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.361173, 0.229586, 0)
size = Vector3(0.208984, 0.0466309, 0.0703125)

[node name="ClimpComponent" type="Node" parent="." node_paths=PackedStringArray("reload_timer")]
script = ExtResource("2_rd0k7")
climp_count = 2
climp_ammo_count = Array[int]([1, 3])
reload_timer = NodePath("../ReloadTime")

[node name="ShootDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ReloadTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ShootDelay" to="." method="_on_shoot_delay_timeout"]
[connection signal="timeout" from="ReloadTime" to="ClimpComponent" method="_on_reload_time_timeout"]
